--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -2,12 +2,8 @@ FROM eclipse-temurin:17-jdk-alpine AS builder
 
 WORKDIR /app
 
-COPY pom.xml mvnw ./
-COPY .mvn .mvn
+COPY . ./
 
-RUN chmod +x mvnw && ./mvnw dependency:go-offline -B
-
-COPY src src
 RUN ./mvnw clean package -DskipTests -B
 
 FROM eclipse-temurin:17-jre-alpine
