--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY . ./
 
-RUN ./mvnw clean package -DskipTests 
+RUN ./mvn clean package -DskipTests 
 
 FROM eclipse-temurin:17-jre-alpine
 
